--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "system-overviewer",
     "main": "src/scripts/index.tsx",
     "scripts": {
-        "start": "webpack-dev-server --mode=development --open"
+        "start": "webpack-dev-server --mode=development --open",
+        "test": "jest"
     },
     "dependencies": {
         "@types/lodash": "^4.14.118",
@@ -25,20 +26,30 @@
         "@babel/preset-env": "^7.2.0",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.1.0",
+        "@types/enzyme": "^3.1.15",
+        "@types/enzyme-adapter-react-16": "^1.0.3",
+        "@types/jest": "^23.3.10",
         "autoprefixer": "^9.4.2",
         "babel-loader": "^8.0.4",
         "case-sensitive-paths-webpack-plugin": "^2.1.2",
         "clean-webpack-plugin": "^1.0.0",
         "css-loader": "^2.0.0",
+        "enzyme": "^3.8.0",
+        "enzyme-adapter-react-16": "^1.7.1",
+        "enzyme-to-json": "^3.3.5",
         "fork-ts-checker-notifier-webpack-plugin": "^0.7.0",
         "fork-ts-checker-webpack-plugin": "^0.5.0",
         "html-webpack-plugin": "^3.2.0",
+        "jest": "^23.6.0",
+        "jest-cli": "^23.6.0",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
         "postcss-loader": "^3.0.0",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
+        "ts-jest": "^23.10.5",
         "tslint": "^5.11.0",
+        "tslint-react": "^3.6.0",
         "typescript": "^3.2.2",
         "webpack": "^4.27.1",
         "webpack-bundle-analyzer": "^3.0.3",
