--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "test": "jest"
     },
     "dependencies": {
-        "@types/lodash": "^4.14.118",
+        "@types/lodash": "^4.14.119",
         "@types/mermaid": "^8.0.0",
         "@types/react": "^16.7.13",
         "@types/react-dom": "^16.0.11",
@@ -51,6 +51,7 @@
         "tslint": "^5.11.0",
         "tslint-react": "^3.6.0",
         "typescript": "^3.2.2",
+        "utility-types": "^2.1.0",
         "webpack": "^4.27.1",
         "webpack-bundle-analyzer": "^3.0.3",
         "webpack-cli": "^3.1.2",
